...
            android:id="@+id/constraintInfos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.MainActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditLati"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/latitude"
                    android:inputType="numberDecimal|numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputLati">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEditLong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/longitude"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal|numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".25" />

            <TextView
                android:id="@+id/txtViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_happen"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
...
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:visibility="gone">

            <ProgressBar
...
